--- a/src/views/desktop1.css
+++ b/src/views/desktop1.css
@@ -1,3 +1,30 @@
+.cadencegraph {
+  top: 915.547119140625px;
+  left: 210px;
+  position: absolute;
+  z-index: 9999; /* Adjust the z-index value as needed */
+  width: 500px; /* Adjust the width as needed */
+  height: 200px; /* Adjust the height as needed */
+}
+
+.stepvariabilitygraph {
+  top: 633px;
+  left: 210px;
+  position: absolute;
+  z-index: 9999; /* Adjust the z-index value as needed */
+  width: 500px; /* Adjust the width as needed */
+  height: 200px;
+}
+
+.copspeedgraph {
+  top: 1200px;
+  left: 210px;
+  position: absolute;
+  z-index: 9999; /* Adjust the z-index value as needed */
+  width: 500px; /* Adjust the width as needed */
+  height: 200px;
+}
+
 .desktop1-container {
   width: 100%;
   display: flex;
