Fixed Router and added more data

--- a/src/views/desktop1.css
+++ b/src/views/desktop1.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+.piechart {
+  top: -30px;
+  left: 60px;
+  position: absolute;
+  z-index: 9999;
+}
+
 .cadencegraph {
   top: 915.547119140625px;
   left: 210px;
@@ -1271,10 +1278,10 @@
   top: 121.48084259033203px;
   left: 101.34239959716797px;
   color: rgba(53, 53, 53, 1);
-  width: 90px;
+  width: 150px;
   height: auto;
   position: absolute;
-  font-size: 7.3331990242004395px;
+  font-size: 10px;
   font-style: SemiBold;
   text-align: left;
   font-family: Poppins;
